<resources>
    <string name="app_name"></string>
    <string name="allgemein_discription">allgemein_discription</string>
    <string name="button_spezialitaet">Spezialität</string>
    <string name="button_nudeln">Nudeln</string>
    <string name="button_reis">Reis</string>
    <string name="button_vegetarisch">Vegetarisch</string>
    <string name="button_r_meunu">Weiter</string>
    <string name="button_n_meunu">Weiter</string>
    <string name="content_descr_cartoon_image">cartoon image</string>
    <string name="textview_p2">Vietnamesische Küche</string>
    <string name="search_p2"> Search...</string>
    <string name="search_p3"> Bitte Gerichte eingeben</string>
    <string name="Spezialitaet_gerichte">Spezialitäte Gerichte</string>
    <string name="nudeln_gerichte">Nudeln Gerichte</string>
    <string name="reis_gerichte">Reis Gerichte</string>
    <string name="vegetarisch_gerichte">Vegetarische Gerichte</string>
    <string name="textview5">Vietnamesische Küche</string>
    <string name="title_activity_nudeln">Nudeln_Activity</string>

    <string name="reis_boluclac">Geschwenktes Rindfleisch</string>
    <string name="reis_canhchuanamchay">Vegetarische Sauersuppe</string>
    <string name="reis_comchienduongchau">Gebratener Reis mit Ei, Garnele und Gemüse</string>
    <string name="reis_comgaluoc">Gekochtes Huhn mit Reis</string>
    <string name="reis_comvitquay">Grillente mit Reis</string>
    <string name="reis_dauhurimtom">Gebratene Tofu mit Garnele</string>
    <string name="reis_dauhusotca">Tofu in Tomatensauce</string>
    <string name="reis_gakhosaot">Gebratenes Hühnchen mit Zitronengras</string>
    <string name="online">Online Rezepte</string>
    <string name="dish_name">Gebrochener Reis mit gegrilltem Kotelett</string>
    <string name="reis_comtam">(Cơm Tấm)</string>

    <string name="reis_comtam_toolbar">Cơm Tấm (Gebrochener Reis mit gegrilltem Kotelett)</string>
    <string name="reis_boluclac_toolbar">Bò lúc lắc (Geschwenktes Rindfleisch)</string>
    <string name="reis_canhchuanamchay_toolbar">Canh chua nấm chay (Vegetarische Sauersuppe)</string>
    <string name="reis_comgaluoc_toolbar">Cơm gà luộc (Gekochtes Huhn mit Reis)</string>
    <string name="reis_comvitquay_toolbar">Cơm Vịt Quay (Grillente mit Reis)</string>
    <string name="reis_gaxaosaot_toolbar">Gà Xao Sả Ớt (Gebratenes Hühnchen mit Zitronengras)</string>
    <string name="reis_comchienduongchau_toolbar">Cơm chiên dương châu (Gebratener Reis mit Ei, Garnele und Gemüse)</string>
    <string name="reis_dauhusotca_toolbar">Đậu hủ sốt cà (Tofu in Tomatensauce)</string>

    <string name="nudeln_phobo">Phở Bò (PHỞ Rindernudelsuppe)</string>
    <string name="nudeln_hutieutmthit">Hủ Tiếu Tôm Thịt (Reisbandnudel Suppe mit Schweinefleisch und Garnele)</string>
    <string name="nudeln_mienga">Miến Gà (Hühner Glasnudelsuppe)</string>
    <string name="nudeln_miquang">Mì Quảng (Quang Nudel)</string>
    <string name="nudeln_bunbohue">Bún Bò Huế (HUẾ Rindersuppe)</string>
    <string name="nudeln_bunthitnuong">Bún Thịt Nướng (Reisnudeln mit gegrilltem Schweinefleisch)</string>
    <string name="nudeln_mienchayraucu">Miến Chay Rau Củ (Vegetarische Glasnudelsuppe)</string>
    <string name="nudeln_mienchayxao"> Miến Chay Xào (Vegetarische gebratene Glasnudeln)</string>

    <string name="spezialitaet_banhmithitheonuong">Bánh Mì Thịt Heo Nướng (Vietnamesiches Schweinefleisch-Baguette)</string>
    <string name="spezialitaet_banhxeo">Bánh Xèo (Vietnamesische Pfannkuchen)</string>
    <string name="spezialitaet_goicuon">Gỏi Cuốn (Vietnamesische Sommerrollen)</string>
    <string name="spezialitaet_bokho">Bò Kho (Vietnamesisches Gulasch)</string>
    <string name="spezialitaet_lauhaisan">Lẩu Hải Sản (Meeresfrüchte Fondue)</string>
    <string name="spezialitaet_chagio">Chả Giò (Vietnamesische Frühlingsrollen)</string>
    <string name="spezialitaet_chagiochay">Chả Giò Chay (Vegetarische Frühlingsrollen)</string>
    <string name="spezialitaet_goicuonchay">Gỏi Cuốn Chay (Vegetarische Sommerrollen)</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!---->
    <string name="phobo_dauer">Dauer: ca. 2 Stunden</string>
    <string name="phobo_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>
    <string name="phobo_rezept">Rezept:</string>

    <string name="hutieutomthit_dauer">Dauer: ca. 1 Stunden</string>
    <string name="hutieutomthit_schwierigkeitsgrad">Schwierigkeitsgrad: leicht</string>
    <string name="hutieutomthit_rezept">Rezept:</string>

    <string name="mienga_dauer">Dauer: ca. 45 Minuten</string>
    <string name="mienga_schwierigkeitsgrad">Schwierigkeitsgrad: leicht</string>
    <string name="mienga_rezept">Rezept:</string>

    <string name="miquang_dauer">Dauer: ca. 1 Stunden</string>
    <string name="miquang_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>
    <string name="miquang_rezept">Rezept:</string>

    <string name="bunbohue_dauer">Dauer: ca. 1,5 Stunden</string>
    <string name="bunbohue_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>
    <string name="bunbohue_rezept">Rezept:</string>

    <string name="bunthitnuong_dauer">Dauer: ca. 1 Stunden</string>
    <string name="bunthitnuong_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>

    <string name="mienchayraucu_dauer">Dauer: ca. 30 Minuten</string>
    <string name="mienchayraucu_schwierigkeitsgrad">Schwierigkeitsgrad: leicht</string>

    <string name="mienchayxao_dauer">Dauer: ca. 30 Minuten</string>
    <string name="mienchayxao_schwierigkeitsgrad">Schwierigkeitsgrad: leicht</string>

    <!---->
    <string name="comtam_dauer">Dauer: ca. 1,5 Stunden</string>
    <string name="comtam_schwierigkeitsgrad">Schwierigkeitsgrad: schwierig</string>

    <string name="boluclac_dauer">Dauer: ca. 45 Minuten</string>
    <string name="boluclac_schwierigkeitsgrad">Schwierigkeitsgrad: leicht</string>

    <string name="canhchuanamchay_dauer">Dauer: ca. 30 Minuten</string>
    <string name="canhchuanamchay_schwierigkeitsgrad">Schwierigkeitsgrad: leicht</string>

    <string name="comgaluoc_dauer">Dauer: ca. 1 Stunden</string>
    <string name="comgaluoc_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>

    <string name="comvitquay_dauer">Dauer: ca. 2 Stunden</string>
    <string name="comvitquay_schwierigkeitsgrad">Schwierigkeitsgrad: schwierig</string>

    <string name="gaxaosaot_dauer">Dauer: ca. 45 Minuten</string>
    <string name="gaxaosaot_schwierigkeitsgrad">Schwierigkeitsgrad: leicht</string>

    <string name="comchienduongchau_dauer">Dauer: ca. 1 Stunden</string>
    <string name="comchienduongchau_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>

    <string name="dauhusotca_dauer">Dauer: ca. 30 Minuten</string>
    <string name="dauhusotca_schwierigkeitsgrad">Schwierigkeitsgrad: leicht</string>

    <!---->
    <string name="banhxeo_dauer">Dauer: ca. 1,5 Stunden</string>
    <string name="banhxeo_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>

    <string name="goicuon_dauer">Dauer: ca. 1 Stunden</string>
    <string name="goicuon_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>

    <string name="bokho_dauer">Dauer: ca. 1,5 Stunden</string>
    <string name="bokho_schwierigkeitsgrad">Schwierigkeitsgrad: leicht</string>

    <string name="lauhaisan_dauer">Dauer: ca. 1 Stunden</string>
    <string name="lauhaisan_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>

    <string name="chagio_dauer">Dauer: ca. 1 Stunden</string>
    <string name="chagio_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>

    <string name="chagiochay_dauer">Dauer: ca. 1 Stunden</string>
    <string name="chagiochay_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>

    <string name="goicuonchay_dauer">Dauer: ca. 45 Minuten</string>
    <string name="goicuonchay_schwierigkeitsgrad">Schwierigkeitsgrad: leicht</string>

    <string name="banhmithitheonuong_dauer">Dauer: ca. 1 Stunden</string>
    <string name="banhmithitheonuong_schwierigkeitsgrad">Schwierigkeitsgrad: mittel</string>

    <string name="HorizontalSrollView">scrollen</string>
    <string name="backbutton">backbutton</string>
    <string name="btn_texttospeech">Text to speech</string>

    <string name="dauer">Dauer:</string>

    <string name="api_key">4fcfa11a7f4a4b6fbee7449f74f144e7</string>
    <string name="dishes_name">Dish Name</string>
    <string name="two_persons">2 Persons</string>
    <string name="menu">Menu</string>
    <string name="dessert">Dessert</string>

    <string-array name="tags">
        <item>appetizer</item>
        <item>salad</item>
        <item>main course</item>
        <item>dessert</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
    </string-array>

</resources>
