<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/hintergrund10"
    tools:context=".VietnamesichesKueche_Activity"
    tools:ignore="ExtraText">

    <include layout="@layout/toolbar_vietnamesische_kueche_avtivity"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="2"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:columnOrderPreserved="false">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="165dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <ImageView
                android:id="@+id/reisImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/reis">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/reisButton"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="30dp"
            android:text="@string/button_reis"
            android:textSize="24sp"
            android:fontFamily="@font/alice"
            android:textStyle="bold">
        </Button>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <ImageView
                android:id="@+id/nudelnImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/nudeln">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/nudelnButton"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="30dp"
            android:text="@string/button_nudeln"
            android:textSize="24sp"
            android:fontFamily="@font/alice"
            android:textStyle="bold">
        </Button>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <ImageView
                android:id="@+id/spezialitaetImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/spezialitaet">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/spezialitaetButton"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="30dp"
            android:text="@string/button_spezialitaet"
            android:textSize="24sp"
            android:fontFamily="@font/alice"
            android:textStyle="bold">
        </Button>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <ImageView
                android:id="@+id/vegetarischImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/vegetarisch">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/vegetarischButton"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="30dp"
            android:text="@string/button_vegetarisch"
            android:textSize="24sp"
            android:fontFamily="@font/alice"
            android:textStyle="bold">
        </Button>

    </GridLayout>

</LinearLayout>