<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hintergrund1"
    android:theme="@style/Theme.VietnamesicheKüche.AppBarOverlay">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Theme.VietnamesicheKüche.PopupOverlay">

            <ImageView
                android:id="@+id/left_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back_24"></ImageView>

            <TextView
                android:id="@+id/reis_comgaluoc_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="26dp"
                android:layout_toEndOf="@id/left_back_icon"
                android:fontFamily="@font/alice"
                android:text="@string/reis_gaxaosaot_toolbar"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold">
            </TextView>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/reis_gaxaosaot_f1_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        app:srcCompat="@drawable/reis_gaxaosaot_f1_1"></ImageView>

                    <ImageView
                        android:id="@+id/reis_gaxaosaot_f2_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        app:srcCompat="@drawable/reis_gaxaosaot_f2_1"></ImageView>

                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gaxaosaot_dauer"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/alice"
                    android:text="@string/gaxaosaot_dauer"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></TextView>

                <TextView
                    android:id="@+id/gaxaosaot_schwierigkeitsgrad"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/alice"
                    android:text="@string/gaxaosaot_schwierigkeitsgrad"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gaxaosaot_dauer"></TextView>

                <TextView
                    android:id="@+id/gaxaosaot_rezept"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/alice"
                    android:text="@string/miquang_rezept"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gaxaosaot_schwierigkeitsgrad"
                    app:layout_constraintVertical_bias="0.0"></TextView>

                <TextView
                    android:id="@+id/gaxaosaot_zutaten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/alice"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gaxaosaot_rezept"
                    app:layout_constraintVertical_bias="0.0"></TextView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>